--- a/nursery/src/main/resources/application.properties
+++ b/nursery/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.uri= mongodb://mongodb.beyond-coding.com/i3sadra
+spring.data.mongodb.uri=${MONGODB_URI}
 server.port=9002
 accountancy.url=http://localhost:9003/patients
