--- a/UI/src/main/resources/application.properties
+++ b/UI/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 admission.url=http://localhost:8081/patients
 accountancy.invoices.url=http://localhost:9003/invoices
+my.username=${SPRING_USER}
+my.password=${SPRING_PASSWORD}
